--- a/info2180-project1-starter-master/styles.css
+++ b/info2180-project1-starter-master/styles.css
@@ -8,4 +8,56 @@ body {
     margin: 0 auto;
     max-width: 960px;
     width: 100%;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: (1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr);
+    grid-template-areas: 
+    "header header" 
+    "overview-hero overview-hero"
+    "learn-about learn-about" 
+    "testing testing"
+    "stories stories"
+    "newsletter newsletter"
+    "footer footer";
+
+}
+header{
+    background-color: white;
+    grid-area: header;
+    padding-top: 70px;
+}
+header h1{ 
+    font-size: 18px;
+    float: left;
+}
+header ul{
+    float: right;
+    list-style-type: none;
+}
+li{
+    font-size: 18px;
+    display: inline;
+    color: #6b7280;
+}
+li:hover{
+    color: #5A67D8;
+}
+.overview-hero{
+    background-color: #E2E8F0 ;
+    grid-area: overview-hero;
+}
+.learn-about{
+    grid-area: learn-about;
+}
+.testing{
+    grid-area: testing;
+}
+.stories{
+    grid-area: stories;
+}
+.newsletter{
+    grid-area: newsletter;
+}
+.footer{
+    grid-area: footer;
 }
