--- a/info2180-project1-starter-master/styles.css
+++ b/info2180-project1-starter-master/styles.css
@@ -37,21 +37,54 @@ header ul{
 li{
     font-size: 18px;
     display: inline;
+}
+header li a{
+    text-decoration: none;
+}
+header nav a{
     color: #6b7280;
 }
-li:hover{
+a:hover{
     color: #5A67D8;
 }
 .overview-hero{
     background-color: #E2E8F0 ;
     grid-area: overview-hero;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 .overview-hero img{
     width: 350px; height: 250px;
     float: left;
+    padding-right: 40px;
 }
 .learn-about{
     grid-area: learn-about;
+    padding-top: 50px;
+}
+.learn-about h2{
+    font-size: 24px;
+    color: #48BB78; 
+}
+.learn-about .card-body h3{
+    color: #48BB78;
+    font-size: 21px;
+}
+.cards{
+    column-count: 3;
+    
+}
+.card img{
+    width: 100%;
+    height: 100%;
+}
+.learn-about .container .cards .card{
+    border: 1px #E2E8F0;
+    box-sizing: border-box;
+    box-shadow: 5px;
+    border-radius: 5px;
+    width: 300px;
+    height: 300px;
 }
 .testing{
     grid-area: testing;
