--- a/info2180-project1-starter-master/styles.css
+++ b/info2180-project1-starter-master/styles.css
@@ -12,13 +12,13 @@ body {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: (1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr);
     grid-template-areas: 
-    "header header" 
-    "overview-hero overview-hero"
-    "learn-about learn-about" 
-    "testing testing"
-    "stories stories"
-    "newsletter newsletter"
-    "footer footer";
+    "header header header" 
+    "overview-hero overview-hero overview-hero"
+    "learn-about learn-about learn-about" 
+    "testing testing testing"
+    "stories stories stories"
+    "newsletter newsletter newsletter"
+    "footer footer footer";
 
 }
 header{
@@ -61,6 +61,10 @@ a:hover{
 .learn-about{
     grid-area: learn-about;
     padding-top: 50px;
+    display: grid;
+    display: inline;
+    column-count: 3;
+    
 }
 .learn-about h2{
     font-size: 24px;
@@ -72,29 +76,79 @@ a:hover{
 }
 .cards{
     column-count: 3;
-    
+    column-gap: 2rem;
 }
 .card img{
     width: 100%;
     height: 100%;
 }
 .learn-about .container .cards .card{
-    border: 1px #E2E8F0;
+    border: 2px solid #E2E8F0;
     box-sizing: border-box;
-    box-shadow: 5px;
+    box-shadow: 5px 5px #E2E8F0;
     border-radius: 5px;
     width: 300px;
     height: 300px;
+    padding: 10%;
 }
+
 .testing{
     grid-area: testing;
+    background-color: #4A5568;
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+.testing .cta a{
+    background-color: #48BB78;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    border-radius: 5px;
+    float: right;
+}
+.testing-desciption h2 {
+    float: left;
+    color: white;
+}
+.testing .testing-desciption p {
+    float: left;
+    color: white;
 }
 .stories{
     grid-area: stories;
 }
+.stories img{
+    width: 300px; height: 300px;
+    border-radius: 100%;
+    float: left;
+}
+.stories .container .article-body p a{
+    color:#5A67D8;
+    font-size: 18px;
+}
+.article-body p{
+    display: wrap;
+    max-width: 200%;
+}
 .newsletter{
     grid-area: newsletter;
+    text-align: center;
+    justify-self: center;
+    background-color:#48BB78;
+    padding-top: 80px;
+    padding-bottom: 80px;
 }
-.footer{
+.newsletter .container {
+    color: white;
+}
+.newsletter .container .form-group .btn{
+    background-color:#5A67D8;
+}
+footer{
     grid-area: footer;
+    background-color: #4A5568;
+}
+footer p{
+    color: white;
 }
