--- a/info2180-project1-starter-master/styles.css
+++ b/info2180-project1-starter-master/styles.css
@@ -11,20 +11,20 @@ body {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: (1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr);
-    grid-template-areas: 
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /*grid-template-areas: 
     "header header header" 
     "overview-hero overview-hero overview-hero"
     "learn-about learn-about learn-about" 
     "testing testing testing"
     "stories stories stories"
     "newsletter newsletter newsletter"
-    "footer footer footer";
+    "footer footer footer";*/
 
 }
 header{
-    background-color: white;
-    grid-area: header;
-    padding-top: 70px;
+    background-color: white; 
+    padding-top: 50px;
 }
 header h1{ 
     font-size: 18px;
@@ -49,22 +49,22 @@ a:hover{
 }
 .overview-hero{
     background-color: #E2E8F0 ;
-    grid-area: overview-hero;
-    padding-top: 40px;
-    padding-bottom: 40px;
+   
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 .overview-hero img{
     width: 350px; height: 250px;
     float: left;
-    padding-right: 40px;
+   
+}
+.overview-hero-text {
+    float: right;
 }
 .learn-about{
     grid-area: learn-about;
-    padding-top: 50px;
-    display: grid;
-    display: inline;
-    column-count: 3;
-    
+    padding-top: 40px;
+    padding-bottom: 70px;
 }
 .learn-about h2{
     font-size: 24px;
@@ -75,21 +75,22 @@ a:hover{
     font-size: 21px;
 }
 .cards{
-    column-count: 3;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     column-gap: 2rem;
 }
 .card img{
+    margin: 0 auto;
+    height: 240px;
     width: 100%;
-    height: 100%;
 }
-.learn-about .container .cards .card{
+.card{
     border: 2px solid #E2E8F0;
-    box-sizing: border-box;
     box-shadow: 5px 5px #E2E8F0;
     border-radius: 5px;
     width: 300px;
-    height: 300px;
-    padding: 10%;
+    height: 450px;
+    padding-left: 10px;
 }
 
 .testing{
@@ -100,11 +101,13 @@ a:hover{
 }
 .testing .cta a{
     background-color: #48BB78;
-    padding-right: 10px;
-    padding-left: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
     padding-bottom: 10px;
     padding-top: 10px;
     border-radius: 5px;
+    color: white;
+    text-decoration: none;
     float: right;
 }
 .testing-desciption h2 {
@@ -118,21 +121,29 @@ a:hover{
 .stories{
     grid-area: stories;
 }
+.article{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    row-gap: 2rem;
+}
+.stories .article-body{
+    float: right;
+    max-width: 450%;
+    display: inline;
+}
 .stories img{
     width: 300px; height: 300px;
     border-radius: 100%;
-    float: left;
+}
+.stories h2{
+    color: #48BB78;
 }
 .stories .container .article-body p a{
     color:#5A67D8;
     font-size: 18px;
-}
-.article-body p{
-    display: wrap;
-    max-width: 200%;
+    text-decoration: none;
 }
 .newsletter{
-    grid-area: newsletter;
     text-align: center;
     justify-self: center;
     background-color:#48BB78;
@@ -142,7 +153,18 @@ a:hover{
 .newsletter .container {
     color: white;
 }
-.newsletter .container .form-group .btn{
+.form-group{
+    display: inline-block;
+}
+.newsletter button{
+    background-color:#5A67D8;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 30px;
+    padding-right: 30px;
+    color: white;
+}
+.newsletter .container .submit .btn{
     background-color:#5A67D8;
 }
 footer{
